samples/_failures_safe/1761204183_75d004_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6ed41cc.c: In function ‘main’:
./samples/SAFE/__tmp_b6ed41cc.c:169:14: error: expected ‘)’ at end of input
  169 |     if (scanf
      |        ~     ^
      |              )
./samples/SAFE/__tmp_b6ed41cc.c:169:5: error: expected declaration or statement at end of input
  169 |     if (scanf
      |     ^~
